force-app/main/default/objects/UTXO_Asset__c/UTXO_Asset__c.object-meta.xml
<CustomObject>
    <label>UTXO Asset</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>UTXO Asset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UTXO Assets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>