force-app/main/default/objects/UTXO_Asset__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>UTXO Assets</relationshipLabel>
    <relationshipName>UTXO_Assets</relationshipName>
    <type>Lookup</type>
</CustomField>