force-app/main/default/objects/UTXO_Asset__c/fields/Blockfrost_ID__c.field-meta.xml
<CustomField>
    <fullName>Blockfrost_ID__c</fullName>
    <externalId>true</externalId>
    <label>Blockfrost ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>