force-app/main/default/objects/UTXO_Asset__c/fields/Decimals__c.field-meta.xml
<CustomField>
    <fullName>Decimals__c</fullName>
    <label>Decimals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 