force-app/main/default/objects/UTXO_Asset__c/fields/Fingerprint__c.field-meta.xml
<CustomField>
    <fullName>Fingerprint__c</fullName>
    <label>Fingerprint</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 