force-app/main/default/objects/UTXO_Asset__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon (Base64)</label>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>