force-app/main/default/objects/UTXO_Asset__c/fields/Initial_Mint_Tx_Hash__c.field-meta.xml
<CustomField>
    <fullName>Initial_Mint_Tx_Hash__c</fullName>
    <label>Initial Mint Tx Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 