force-app/main/default/objects/UTXO_Asset__c/fields/Onchain_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Onchain_Metadata__c</fullName>
    <label>Onchain Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 