force-app/main/default/objects/UTXO_Asset__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <externalId>true</externalId>
    <label>Asset</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 