force-app/main/default/objects/UTXO_Asset__c/fields/UTXO_Address__c.field-meta.xml
<CustomField>
    <fullName>UTXO_Address__c</fullName>
    <label>UTXO Address</label>
    <referenceTo>UTXO_Address__c</referenceTo>
    <relationshipLabel>UTXO Assets</relationshipLabel>
    <relationshipName>UTXO_Assets</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>