force-app/main/default/objects/UTXO_Asset__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>CASE(Decimals__c, 
        0, Amount__c,
        1, Amount__c / 10,
        2, Amount__c / 100,
        3, Amount__c / 1000,
        4, Amount__c / 10000,
        5, Amount__c / 100000,
        6, Amount__c / 1000000,
        7, Amount__c / 10000000,
        8, Amount__c / 100000000,
        9, Amount__c / 1000000000,
        10, Amount__c / 10000000000,
        Amount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField> 